--- a/debkanchan.ipynb
+++ b/debkanchan.ipynb
@@ -71,7 +71,6 @@
     "  F\"{DATASET_DIR}/train\",\n",
     "  validation_split=0.2,\n",
     "  subset=\"training\",\n",
-    "  seed=123,\n",
     "  # image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
     "  batch_size=BATCH_SIZE,\n",
     ")\n",
@@ -80,7 +79,6 @@
     "  F\"{DATASET_DIR}/train\",\n",
     "  validation_split=0.2,\n",
     "  subset=\"validation\",\n",
-    "  seed=123,\n",
     "  # image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
     "  batch_size=BATCH_SIZE,\n",
     ")"
@@ -403,7 +401,13 @@
       "Epoch 15/50\n",
       "250/250 [==============================] - 102s 409ms/step - loss: 0.3687 - sparse_categorical_accuracy: 0.8709 - val_loss: 0.3789 - val_sparse_categorical_accuracy: 0.8795\n",
       "Epoch 16/50\n",
-      "250/250 [==============================] - ETA: 0s - loss: 0.3589 - sparse_categorical_accuracy: 0.8736"
+      "250/250 [==============================] - 54s 215ms/step - loss: 0.3589 - sparse_categorical_accuracy: 0.8736 - val_loss: 0.3336 - val_sparse_categorical_accuracy: 0.8920\n",
+      "Epoch 17/50\n",
+      "250/250 [==============================] - 55s 220ms/step - loss: 0.3424 - sparse_categorical_accuracy: 0.8795 - val_loss: 0.3295 - val_sparse_categorical_accuracy: 0.8890\n",
+      "Epoch 18/50\n",
+      "250/250 [==============================] - 50s 198ms/step - loss: 0.3247 - sparse_categorical_accuracy: 0.8881 - val_loss: 0.3828 - val_sparse_categorical_accuracy: 0.8630\n",
+      "Epoch 19/50\n",
+      " 86/250 [=========>....................] - ETA: 30s - loss: 0.2768 - sparse_categorical_accuracy: 0.9059"
      ]
     }
    ],
@@ -487,11 +491,7 @@
     }
    ],
    "source": [
-    "test_ds = keras.utils.image_dataset_from_directory(\n",
-    "  F\"{DATASET_DIR}/valid\",\n",
-    "  # image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
-    "  # batch_size=BATCH_SIZE,\n",
-    ")\n",
+    "test_ds = keras.utils.image_dataset_from_directory(F\"{DATASET_DIR}/valid\")\n",
     "\n",
     "results = model.evaluate(test_ds, verbose=0)\n",
     "\n",
