--- a/debkanchan.ipynb
+++ b/debkanchan.ipynb
@@ -116,6 +116,7 @@
     "  F\"{DATASET_DIR}/train\",\n",
     "  validation_split=0.2,\n",
     "  subset=\"training\",\n",
+    "  seed=123,\n",
     "  batch_size=BATCH_SIZE,\n",
     ")\n",
     "\n",
@@ -123,6 +124,7 @@
     "  F\"{DATASET_DIR}/train\",\n",
     "  validation_split=0.2,\n",
     "  subset=\"validation\",\n",
+    "  seed=123,\n",
     "  batch_size=BATCH_SIZE,\n",
     ")"
    ]
@@ -158,12 +160,7 @@
     "    ax = plt.subplot(3, 3, i + 1)\n",
     "    plt.imshow(images[i].numpy().astype(\"uint8\"))\n",
     "    plt.title(class_names[labels[i]])\n",
-    "    plt.axis(\"off\")\n",
-    "\n",
-    "# for image_batch, labels_batch in train_ds:\n",
-    "#   print(image_batch.shape)\n",
-    "#   print(labels_batch.shape)\n",
-    "#   break"
+    "    plt.axis(\"off\")"
    ]
   },
   {
@@ -255,17 +252,20 @@
     "    preprocessing,\n",
     "\n",
     "    keras.layers.Conv2D(32, 3, padding=\"same\", activation=\"relu\"),\n",
+    "    # keras.layers.BatchNormalization(momentum=0.87),\n",
     "    keras.layers.MaxPooling2D(),\n",
     "\n",
     "    keras.layers.Conv2D(64, 3, padding=\"same\", activation=\"relu\"),\n",
+    "    # keras.layers.BatchNormalization(momentum=0.87),\n",
     "    keras.layers.MaxPooling2D(),\n",
     "\n",
     "    keras.layers.Conv2D(128, 3, padding=\"same\", activation=\"relu\"),\n",
+    "    # keras.layers.BatchNormalization(momentum=0.87),\n",
     "    keras.layers.MaxPooling2D(),\n",
     "\n",
     "    keras.layers.GlobalAveragePooling2D(),\n",
     "\n",
-    "    keras.layers.Dropout(0.2),\n",
+    "    keras.layers.Dropout(0.15),\n",
     "\n",
     "    keras.layers.Dense(NUM_CLASSES, activation=\"softmax\")\n",
     "])\n",
@@ -419,14 +419,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dot_img_file = '/tmp/model_architecture.png'\n",
-    "# tf.keras.utils.plot_model(\n",
-    "#     model,\n",
-    "#     to_file=dot_img_file,\n",
-    "#     show_shapes=True,\n",
-    "#     show_layer_names=False,\n",
-    "#     expand_nested=True\n",
-    "# )"
+    "dot_img_file = '/tmp/model_architecture.png'\n",
+    "tf.keras.utils.plot_model(\n",
+    "    model,\n",
+    "    to_file=dot_img_file,\n",
+    "    show_shapes=True,\n",
+    "    show_layer_names=False,\n",
+    "    expand_nested=True\n",
+    ")"
    ]
   }
  ],
